Cambios en la vista

--- a/ng-chat-socket/src/app/components/chat/chat.component.html
+++ b/ng-chat-socket/src/app/components/chat/chat.component.html
@@ -1,30 +1,30 @@
-<div class="chat-window">
-    <div class="top-menu">
-        <div class="buttons">
-            <div class="button close"></div>
-            <div class="button min"></div>
-            <div class="button max"></div>
-        </div>
-        <div class="title">
-            <img src="" alt="" width="25px" height="25px">
-            Turttle Messages
-        </div>
+<div class="chat_window">
+    <div class="top_menu">
+      <div class="buttons">
+        <div class="button close"></div>
+        <div class="button minimize"></div>
+        <div class="button maximize"></div>
+      </div>
+      <div class="title">
+        <img src="../../../assets/logo1.png" width="25px" height="25px">
+        Turttle Chat
+      </div>
     </div>
     <ul class="messages">
-        <li class="message right">
-            <div class="avatar"></div>
-            <div class="text-wraper">
-                <div class="text">Hola</div>
-            </div>
-        </li>
+      <li class="message right">
+        <div class="avatar"></div>
+        <div class="text_wrapper">
+          <div class="text">Hola</div>
+        </div>
+      </li>
     </ul>
-    <div class="bottom-wrapper clearfix">
-        <div class="menssage-input-wrapper">
-            <input type="text" class="message-input" placeholder="Mensaje...">
-        </div>
-        <div class="send-message">
-            <div class="icon"></div>
-            <div class="text">Enviar</div>
-        </div>
+    <div class="bottom_wrapper clearfix">
+      <div class="message_input_wrapper">
+        <input class="message_input" placeholder="Mensaje..." />
+      </div>
+      <div class="send_message">
+        <div class="icon"></div>
+        <div class="text">Enviar</div>
+      </div>
     </div>
-</div>
+  </div>
