--- a/ng-chat-socket/src/app/components/chat/chat.component.html
+++ b/ng-chat-socket/src/app/components/chat/chat.component.html
@@ -22,7 +22,7 @@
       <div class="message_input_wrapper">
         <input class="message_input" placeholder="Mensaje..." />
       </div>
-      <div class="send_message">
+      <div class="send_message" (click)="sendMessage()">
         <div class="icon"></div>
         <div class="text">Enviar</div>
       </div>
