--- a/ng-chat-socket/src/app/components/chat/chat.component.html
+++ b/ng-chat-socket/src/app/components/chat/chat.component.html
@@ -6,7 +6,7 @@
         <div class="button maximize"></div>
       </div>
       <div class="title">
-        <img src="../../../assets/logo1.png" width="25px" height="25px">
+        <img src="../../../assets/logo1.png" alt="logo" width="25px" height="25px">
         Turttle Chat
       </div>
     </div>
